RESOLVED FIXED295301
[Regression@296647@main] HDR canvas is no longer HDR
https://bugs.webkit.org/show_bug.cgi?id=295301
Summary [Regression@296647@main] HDR canvas is no longer HDR
Mike Wyrzykowski
Reported 2025-07-01 15:18:35 PDT
[Regression@296647@main] HDR canvas is no longer HDR
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-01 15:19:04 PDT
Mike Wyrzykowski
Comment 2 2025-07-01 15:20:32 PDT
Repro: % cd ${WebKit_root} % open LayoutTests/fast/webgpu/regression/edr-triangle.html triangle should be bright
Mike Wyrzykowski
Comment 3 2025-07-01 17:25:19 PDT
EWS
Comment 4 2025-07-01 20:41:02 PDT
Committed 296899@main (57c0f48eb8d1): <https://commits.webkit.org/296899@main> Reviewed commits have been landed. Closing PR #47465 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.