[Regression@296647@main] HDR canvas is no longer HDR https://bugs.webkit.org/show_bug.cgi?id=295301 rdar://154801239

Reviewed by Gerald Squelart.

Only set contentsHeadroom on the CALayer when we disable tonemapping
otherwise setting CAToneMapMode to CAToneMapModeIfSupported will have
no effect.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStoreProperties::applyBackingStoreToLayer):

Canonical link: https://commits.webkit.org/296899@main